# validator-collection

./: .gitignore  .pylintrc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  _README.md  _README.rst  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-test-publish.yml
docs/: Makefile  _checker_list.rst  _contributors.rst  _dependencies.rst  _unit_tests_code_coverage.rst  _using_checkers.rst  _using_validators.rst  _validator_list.rst  checkers.rst  conf.py  contributing.rst  errors.rst  glossary.rst  history.rst  index.rst  make.bat  testing.rst  validators.rst
tests/: __init__.py  conftest.py  test_checkers.py  test_decorators.py  test_validators.py
validator_collection/: __init__.py  _compat.py  _decorators.py  _version.py  checkers.py  errors.py  validators.py
