[metadata]
license_file = LICENSE
description_file = README.rst

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1

[coverage:run]
branch = True
source = validator_collection
omit =
    */_compat.py
    */_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
ignore_errors = True
